--- a/ParentDriver/ParentDriver/Resources/Strings/en.lproj/Localizable.strings
+++ b/ParentDriver/ParentDriver/Resources/Strings/en.lproj/Localizable.strings
@@ -59,3 +59,15 @@
 
 /* loco:61764a139f68ce12a96c81c2 */
 "title_logout" = "Logout";
+
+/* loco:61786025eb3ce309e46479e2 */
+"label_student" = "Student:";
+
+/* loco:617860320c487c193f4bdc32 */
+"label_time" = "Time:";
+
+/* loco:617860410cec1743b800b902 */
+"label_status" = "Status:";
+
+/* loco:61788103546f8a47d72b61a2 */
+"title_sign_up" = "Sign up";
